# colorist

./: CMakeLists.txt  Makefile  README.md
doc/: .gitignore  biblio.bib  summary.tex
sample/: bob_ross.pbm  bob_ross.ppm  brokenFeep.pbm  example.ppm  feep.pbm  feep.ppm  mearth.pbm  moreBrokenFeep.pbm  randomGarbage  reallyBrokenFeep.pbm  regions.pbm
src/: CMakeLists.txt  README.md  color.cxx  color.h  disjoint.cxx  disjoint.h  disjoint.hxx  main.cxx  matrix.h  pixmap.cxx  pixmap.h
src/test/: disjoint.cxx  pixmap.cxx
test/: CMakeLists.txt  disjoint.cxx  pixmap.cxx
