CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(colorist)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
ADD_DEFINITIONS(-std=c++14)
ENABLE_TESTING()

FILE(GLOB SOURCES src/*.cxx)
FILE(GLOB MAIN src/main.cxx)
LIST(REMOVE_ITEM SOURCES ${MAIN})
FILE(GLOB TESTS test/*.cxx)

ADD_EXECUTABLE(colorist ${MAIN} ${SOURCES})
ADD_EXECUTABLE(catch ${TESTS} ${SOURCES})
ADD_TEST(
	NAME Catch
	COMMAND catch --force-colour
	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
